# countProductBackend

./: .gitignore  Dockerfile  alembic.ini  compose.yaml  configure_fastapi_app.py  create_fastapi_app.py  main.py  pyproject.toml  requirements.txt
app/: base_router.py  settings.py
app/database/: base.py  dependencies.py  recreate.py
app/database/alembic/: env.py
app/database/alembic/versions/: 5a7be8892b3d_test.py
app/database/models/: categories.py  products.py  storages.py  users.py  users_in_storages.py
app/domains/auth/: dependencies.py  repository.py  routes.py  service.py
app/domains/categories/: dependencies.py  exc.py  repository.py  routes.py  schemas.py  service.py
app/domains/products/: dependencies.py  exc.py  repository.py  routes.py  schemas.py  service.py
app/domains/storages/: dependencies.py  exc.py  repository.py  routes.py  schemas.py  service.py
app/domains/uis/: dependencies.py  exc.py  repository.py  service.py
app/domains/users/: dependencies.py  repository.py  routes.py  schemas.py  service.py
app/utils/: add_handlers.py  create_fastapi_app.py  logger_config.py  rebuild.py  utils.py
app/utils/classes/: AuthJWT.py
app/utils/classes/enums/: unitenum.py
backend/api/: response_schemas.py
backend/api/routers/: auth.py  base.py  categories.py  products.py  storages.py  users.py
backend/api/routers/auth/: base.py
backend/api/routers/storages/: base.py  categories.py  products.py  single.py  users.py
backend/api/routers/test/: base.py
backend/api/routers/users/: base.py
backend/src/config/: add_cors.py  add_exception_handler.py  add_handlers.py  async_helper.py  log_config.py  logger_config.py  settings.py
backend/src/config/logger_config/: core.py  db_logs.py  http_logs.py
backend/src/core/: rebuild.py
backend/src/core/auth/: dependencies.py  repository.py  schemas.py  service.py
backend/src/core/categories/: dependencies.py  repository.py  schemas.py  service.py
backend/src/core/products/: dependencies.py  repository.py  schemas.py  service.py
backend/src/core/storages/: dependencies.py  repository.py  schemas.py  service.py
backend/src/db/: base.py  core.py  dependencies.py  recreate.py
backend/src/lib/: const.py  exc.py  get_code.py  utils.py
backend/src/services/: rebuild.py
(+41 files in other folders)
