[project]
name = "countproduct"
version = "1.0.0"
description = ""
authors = [
    {name = "nnn1k"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "h11 (==0.16.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "bcrypt (==4.3.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.6.15)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "cleo (==2.1.0)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "crashtest (==0.4.1)",
    "cryptography (==44.0.2)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.8)",
    "fastapi (==0.115.12)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "greenlet (==3.1.1)",
    "httpcore (==1.0.9)",
    "httptools (==0.6.4)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.2.1)",
    "keyring (==25.6.0)",
    "loguru (==0.7.3)",
    "more-itertools (==10.7.0)",
    "msgpack (==1.1.1)",
    "packaging (==25.0)",
    "pbs-installer (==2025.6.12)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.8)",
    "poetry (==2.1.3)",
    "poetry-core (==2.1.3)",
    "psycopg (==3.2.6)",
    "psycopg-binary (==3.2.6)",
    "pycparser (==2.22)",
    "pydantic (==2.10.6)",
    "pydantic-settings (==2.8.1)",
    "pydantic-core (==2.27.2)",
    "pyjwt (==2.10.1)",
    "pyproject-hooks (==1.2.0)",
    "python-dotenv (==1.0.1)",
    "pywin32-ctypes (==0.2.3)",
    "pyyaml (==6.0.2)",
    "rapidfuzz (==3.13.0)",
    "requests (==2.32.4)",
    "requests-toolbelt (==1.0.0)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.39)",
    "starlette (==0.46.1)",
    "tomlkit (==0.13.3)",
    "trove-classifiers (==2025.5.9.12)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "uvicorn (==0.34.0)",
    "virtualenv (==20.31.2)",
    "watchfiles (==1.0.4)",
    "websockets (==15.0.1)",
    "win32-setctime (==1.2.0)",
    "zstandard (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
